# aoc-2024

./: .gitignore  Cargo.toml
benches/: all.rs
data/day17/: mini4.txt  mini5.txt
data/day24/: input_1.txt
data/day8/: mini.txt
src/: lib.rs  main.rs
src/commands/: init.rs  run.rs
src/solvers/: day1.rs  day10.rs  day12.rs  day13.rs  day15.rs  day17.rs  day19.rs  day2.rs  day22.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day7.rs  day8.rs  grid.rs  mod.rs
src/template/: template.rs
src/util/: grid.rs  parse.rs  point.rs
src/year2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day5.rs  day6.rs  day8.rs  day9.rs  mod.rs
src/year2025/: day01.rs
