[package]
name = "rust-aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
once_cell = "1.20.2"
regex = "1.11.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rustc-hash = { version = "2.1" }

[[bench]]
name = "all"
harness = false
